--- a/contrib/helm-charts/portus/templates/portus-secret.yaml
+++ b/contrib/helm-charts/portus/templates/portus-secret.yaml
@@ -25,5 +25,7 @@ data:
   PORTUS_PRODUCTION_PASSWORD: {{ .Values.portus.productionPassword | b64enc | quote }}
   {{- end }}
 
+  {{- if .Values.portus.tls.enabled }}
   key: {{ .Values.portus.key | b64enc | quote }}
   cert: {{ .Values.portus.cert | b64enc | quote }}
+  {{- end }}
