--- a/contrib/helm-charts/portus/templates/portus-deployment.yaml
+++ b/contrib/helm-charts/portus/templates/portus-deployment.yaml
@@ -23,6 +23,10 @@ spec:
         - name: {{ template "portus.fullname" . }} 
           image: "{{ .Values.portus.image.repository }}:{{ .Values.portus.image.tag }}"
           imagePullPolicy: {{ .Values.portus.image.pullPolicy }}
+          {{- if eq false .Values.portus.tls.enabled }}
+          command: ["/bin/bash"]
+          args: ["-c", "openssl genrsa -out /certificates/portus.key 3072;/init"]
+          {{- end }}
           ports:
             - containerPort: {{ .Values.portus.service.port }} 
           env:
@@ -69,11 +73,23 @@ spec:
                 configMapKeyRef: 
                   name: {{ template "portus.fullname" . }}  
                   key: PORTUS_KEY_PATH
+            {{- if .Values.portus.tls.enabled }}
             - name: PORTUS_CERT_PATH
               valueFrom:
                 configMapKeyRef: 
                   name: {{ template "portus.fullname" . }}  
                   key: PORTUS_CERT_PATH
+            - name: PORTUS_PUMA_TLS_KEY
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "portus.fullname" . }}
+                  key: PORTUS_KEY_PATH
+            - name: PORTUS_PUMA_TLS_CERT
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "portus.fullname" . }}
+                  key: PORTUS_CERT_PATH
+            {{- end }}
             - name: PORTUS_SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef: 
@@ -89,16 +105,6 @@ spec:
                 configMapKeyRef: 
                   name: {{ template "portus.fullname" . }}  
                   key: PORTUS_MACHINE_FQDN_VALUE
-            - name: PORTUS_PUMA_TLS_KEY
-              valueFrom:
-                configMapKeyRef: 
-                  name: {{ template "portus.fullname" . }}  
-                  key: PORTUS_KEY_PATH
-            - name: PORTUS_PUMA_TLS_CERT
-              valueFrom:
-                configMapKeyRef: 
-                  name: {{ template "portus.fullname" . }}  
-                  key: PORTUS_CERT_PATH
             - name: RAILS_SERVE_STATIC_FILES 
               valueFrom:
                 configMapKeyRef: 
@@ -109,13 +115,13 @@ spec:
           volumeMounts:
             - name: certvol
               mountPath: /certificates
-              readOnly: true
             - name: config
               mountPath: /srv/Portus/config/config.yml
               subPath: etc/config.yml
               readOnly: true
       volumes:
         - name: certvol
+          {{- if .Values.portus.tls.enabled }}
           secret:
             secretName: {{ template "portus.fullname" . }}
             items:
@@ -123,6 +129,9 @@ spec:
                 path: portus.key
               - key: cert
                 path: portus.crt
+          {{- else }}
+          emptyDir: {}
+          {{- end }}
         - name: config
           configMap:
             name: {{ template "portus.fullname" . }}
