--- a/contrib/helm-charts/portus/templates/portus-service.yaml
+++ b/contrib/helm-charts/portus/templates/portus-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.portus.service.name }} 
+  name: {{ template "portus.fullname" . }}
   labels:
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
