--- a/contrib/helm-charts/portus/templates/registry-deployment.yaml
+++ b/contrib/helm-charts/portus/templates/registry-deployment.yaml
@@ -23,12 +23,15 @@ spec:
         - name: {{ template "registry.fullname" . }}
           image: "{{ .Values.registry.image.repository }}:{{ .Values.registry.image.tag }}" 
           imagePullPolicy: {{ .Values.registry.image.pullPolicy }} 
+          {{- if .Values.portus.tls.enabled }}
           command: ["/bin/sh"]
           args: ["-c", "cp /certificates/portus.crt /usr/local/share/ca-certificates;update-ca-certificates;registry serve /etc/docker/registry/config.yml"]
+          {{- end }}
           ports:
             - containerPort: {{ .Values.registry.service.port }} 
             - containerPort: {{ .Values.registry.service.debugPort }} 
           env:
+            {{- if .Values.portus.tls.enabled }}
             - name: REGISTRY_AUTH_TOKEN_REALM
               valueFrom:
                 configMapKeyRef:
@@ -44,21 +47,33 @@ spec:
                 configMapKeyRef:
                   name: {{ template "registry.fullname" . }}
                   key: REGISTRY_AUTH_TOKEN_ISSUER
-            - name: REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ template "registry.fullname" . }}
-                  key: REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE
-            - name: REGISTRY_HTTP_TLS_CERTIFICATE
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ template "registry.fullname" . }}
-                  key: REGISTRY_HTTP_TLS_CERTIFICATE
             - name: REGISTRY_HTTP_TLS_KEY
               valueFrom:
                 configMapKeyRef:
                   name: {{ template "registry.fullname" . }}
                   key: REGISTRY_HTTP_TLS_KEY
+            - name: REGISTRY_HTTP_TLS_CERTIFICATE
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "registry.fullname" . }}
+                  key: REGISTRY_HTTP_TLS_CERTIFICATE
+            - name: REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "registry.fullname" . }}
+                  key: REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE
+            {{- else }}
+            - name: REGISTRY_AUTH_SILLY_REALM
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "registry.fullname" . }}
+                  key: REGISTRY_AUTH_SILLY_REALM
+            - name: REGISTRY_AUTH_SILLY_SERVICE
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "registry.fullname" . }}
+                  key: REGISTRY_AUTH_SILLY_SERVICE
+            {{- end }}
             - name: REGISTRY_NOTIFICATIONS_ENDPOINTS
               valueFrom:
                 configMapKeyRef:
@@ -67,15 +82,17 @@ spec:
           resources:
 {{ toYaml .Values.registry.resources | indent 12 }}
           volumeMounts:
+            {{- if .Values.portus.tls.enabled }}
             - name: certvol
               mountPath: /certificates
-              readOnly: true
+            {{- end }}
             - name: config
               mountPath: /etc/docker/registry
               readOnly: true
             - name: storage
               mountPath: {{ .Values.registry.mountPath }}
       volumes:
+        {{- if .Values.portus.tls.enabled }}
         - name: certvol
           secret:
             secretName: {{ template "portus.fullname" . }}
@@ -84,6 +101,7 @@ spec:
               path: portus.key
             - key: cert
               path: portus.crt
+        {{- end }}
         - name: config
           configMap:
             name: {{ template "registry.fullname" . }}
