Updates README and NOTES for Portus chart, to reflect non-SSL settings

--- a/contrib/helm-charts/portus/templates/portus-secret.yaml
+++ b/contrib/helm-charts/portus/templates/portus-secret.yaml
@@ -26,6 +26,6 @@ data:
   {{- end }}
 
   {{- if .Values.portus.tls.enabled }}
-  key: {{ .Values.portus.key | b64enc | quote }}
-  cert: {{ .Values.portus.cert | b64enc | quote }}
+  key: {{ .Values.portus.tls.key | b64enc | quote }}
+  cert: {{ .Values.portus.tls.cert | b64enc | quote }}
   {{- end }}
