--- a/contrib/helm-charts/portus/templates/registry-configmap.yaml
+++ b/contrib/helm-charts/portus/templates/registry-configmap.yaml
@@ -9,7 +9,7 @@ metadata:
     heritage: {{ .Release.Service }}
 data:
   {{- if .Values.portus.tls.enabled }}
-  REGISTRY_AUTH_TOKEN_REALM: {{ printf "https://%s:%s/v2/token" (.Values.nginx.host | default (printf "%s" (include "nginx.fullname" .))) (.Values.nginx.service.nodePort | default .Values.nginx.port) | quote }} 
+  REGISTRY_AUTH_TOKEN_REALM: {{ printf "https://%s:%s/v2/token" (.Values.nginx.host | default (printf "%s" (include "nginx.fullname" .))) .Values.nginx.port | quote }}
   REGISTRY_AUTH_TOKEN_SERVICE: {{ printf "%s:%s" (include "registry.fullname" .) .Values.registry.service.port | quote }}
   REGISTRY_AUTH_TOKEN_ISSUER: {{ .Values.portus.service.name | quote }} 
   REGISTRY_HTTP_TLS_KEY: "/certificates/portus.key"
