Sets Portus chart nginx service type to LoadBalancer by default

--- a/contrib/helm-charts/portus/values.yaml
+++ b/contrib/helm-charts/portus/values.yaml
@@ -127,7 +127,7 @@ nginx:
   service:
     ## Set to ClusterIP if using ingress, or NodePort if using minikube 
     ##
-    type: "NodePort"
+    type: "LoadBalancer"
 
     port: "80"
     nodePort: "32123"
