Updates Portus chart to use v2.3. Removes Crono, and adds Portus container for background processing.

--- a/contrib/helm-charts/portus/templates/nginx-ingress.yaml
+++ b/contrib/helm-charts/portus/templates/nginx-ingress.yaml
@@ -14,7 +14,7 @@ metadata:
     {{- end }}
 spec:
   rules:
-    - host: {{ .Values.nginx.ingress.host | quote }}
+    - host: {{ .Values.nginx.host | quote }}
       http:
         paths:
           - backend:
@@ -24,6 +24,6 @@ spec:
   tls:
     - secretName: {{ .Values.nginx.ingress.tls.secretName | quote }}
       hosts:
-        - {{ .Values.nginx.ingress.host | quote }}
+        - {{ .Values.nginx.host | quote }}
   {{- end }}
 {{- end }}
