--- a/contrib/helm-charts/portus/values.yaml
+++ b/contrib/helm-charts/portus/values.yaml
@@ -11,7 +11,7 @@ portus:
   ##
   image:
     repository: "opensuse/portus"
-    tag: "head"
+    tag: "2.3"
     pullPolicy: "IfNotPresent"
 
   ## Service configuration.
@@ -27,14 +27,14 @@ portus:
       cpu: "300m"
 
   ## Portus database configuration.
-  ##
-  productionDatabase: "portus" # name of database
-  productionUsername: "portus" # database user
+  dbAdapter: "mysql2"
 
-  ## only set productionHost and productionPassword if relying on existing mariadb deployment
+  ## only set db values if using existing database deployment
   ##
-  # productionHost:
-  # productionPassword:
+  # dbHost
+  # dbDatabase:
+  # dbUsername:
+  # dbPassword:
 
   ## Defaults to a random 10-character alphanumeric string if not set
   ##
@@ -43,6 +43,37 @@ portus:
   ## Defaults to a random 128-character alphanumeric string if not set
   ##
   # secretKeyBase:
+
+  ## config
+  ##
+  config:
+    email:
+      from: "portus@example.com"
+      name: "Portus"
+      reply_to: "no-reply@example.com"
+      smtp:
+        enabled: false
+        address: "smtp.example.com"
+        port: 587
+        domain: "example.com"
+    gravatar: true  # If enabled, then the profile picture will be picked from the Gravatar
+    delete: true  # Allow admins and owners to delete images and tags
+    first_user_admin: true # First user signing up will be admin
+    signup: true  # If enabled, then users can signup with the signup form
+    display_name: false  # Allow users to have different display names on the web site
+    user_permission:
+      change_visibility: true  # Allow users to change the visibility or their personal namespace
+      create_team: true # Allow users to create teams
+      manage_team: true  # Allow users to create/modify teams if they are an owner of it
+      create_namespace: true # Allow users to create namespaces
+      manage_namespace: true  # Allow users to create/modify namespaces if they are an owner of it
+    security:
+      clair:
+        server: "" # This is only guaranteed to work for v2.0.x releases of Clair
+        health_port: 6061 # Port being used by Clair to report its status
+      zypper:
+        server: "" #  support for this is experimental since this functionality has not been merged into master yet in zypper-docker
+    anonymous_browsing: true # Allow anonymous (non-logged-in) users to explore the images available in your Docker Registry
 
   ## TLS configuration
   ## the internal host names of the portus, registry and nginx service must be covered by the key/cert in order for TLS to work properly
@@ -58,24 +89,14 @@ portus:
     ##
     # cert:
 
-## Default values for Crono. 
-##
-crono:
-  replicas: 1
-
-  ## image configuration.
+  ## background processing
   ##
-  image:
-    repository: "opensuse/portus"
-    tag: "head"
-    pullPolicy: "IfNotPresent"
-
-  ## Resource configuration.
-  ##
-  resources:
-    requests:
-      memory: "512Mi"
-      cpu: "300m"
+  background:
+    enabled: true
+    resources:
+      requests:
+        memory: "512Mi"
+        cpu: "300m"
 
 ## Default values for Docker Registry.
 ##
@@ -86,7 +107,7 @@ registry:
   ## persistence configuration.
   ##
   persistence:
-    enabled: true
+    enabled: false
     accessMode: "ReadWriteOnce"
     size: "10Gi"
 
@@ -127,7 +148,7 @@ nginx:
   service:
     ## Set to ClusterIP if using ingress, or NodePort if using minikube 
     ##
-    type: "LoadBalancer"
+    type: "ClusterIP"
 
     port: "80"
     # nodePort:
@@ -145,16 +166,19 @@ nginx:
 
     ## Anntations to be added to the web ingress
     ##
-    # annotations:
-    #   kubernetes.io/ingress.class: "nginx"
+    annotations:
+      kubernetes.io/ingress.class: "nginx"
+      nginx.ingress.kubernetes.io/proxy-body-size: "0"
+      ingress.kubernetes.io/proxy-body-size: "0"
+
     #   kubernetes.io/ingress.allow-http: "false"
     #   ingress.kubernetes.io/ssl-passthrough: "true"
 
     ## TLS configuration
     ## the ingress host must be covered by the key/cert in order for TLS to work properly
     ##
-    # tls:
-      # enabled: false
+    tls:
+      enabled: false
 
       ## Secrets containing SSL key and cert must be manually created in the namespace
       ##
