Adds liveness probe to Portus chart

--- a/contrib/helm-charts/portus/templates/portus-deployment.yaml
+++ b/contrib/helm-charts/portus/templates/portus-deployment.yaml
@@ -29,6 +29,12 @@ spec:
           {{- end }}
           ports:
             - containerPort: {{ .Values.portus.service.port }}
+          livenessProbe:
+            exec:
+              command:
+                - /api/v1/health
+            initialDelaySeconds: 240
+            periodSeconds: 5
           env:
             - name: PORTUS_MACHINE_FQDN_VALUE
               value: {{ template "portus.fullname" . }}
